Fixed JsonReader String->Path bug